<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aspirecn.hop.sample1.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btn_start_activity_obvious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_activity_obvious" />

    <Button
        android:id="@+id/btn_start_activity_implicit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_activity_implicit" />

    <Button
        android:id="@+id/btn_obtain_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_obtain_content" />

    <Button
        android:id="@+id/btn_send_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_broadcast" />

    <Button
        android:id="@+id/btn_aidl_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_aidl_service" />

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_notification" />

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
